--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [bumpversion]
-current_version = 0.0.1
+current_version = 0.0.5
 commit = True
 tag = True
 push = False
 message = "Bump version: {current_version} → {new_version} [ci skip]"
 
-[bumpversion:file:version.txt]
+[bumpversion:file:setup.py]
 
-[bumpversion:file:zenith/__init__.py]
+[bumpversion:file:zenith_viz/__init__.py]
