--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-include zenith *
-recursive-include zenith/shaders *.shader
-recursive-include zenith/resources *.yml
+recursive-include zenith_viz *
+recursive-include zenith_viz/shaders *.shader
+recursive-include zenith_viz/resources *.yml
